# amiet-self-noise

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
docs/source/: amiet_model.rst  conf.py  index.rst  io.rst  modules.rst  preproc.rst  radiation_integral.rst  theory.rst  usage.rst
src/: preproc.py
src/amiet_self_noise/: __init__.py  amiet_model.py  io.py  io_utils.py  preproc.py  radiation_integral.py
tests/: config_test_amiet_model.yaml  config_test_radiation_integral.yaml  test_amiet_model.py  test_config.yaml  test_config_dns.yaml  test_io.py  test_preproc.py
