[project]
name = "amiet-self-noise"
version = "0.1.0"
description = "Airfoil trailing edge noise computation code. GMC729 final project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "furo>=2024.8.6",
    "numpy>=2.3.1",
    "scipy>=1.16.0",
    "sphinx>=8.2.3",
]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]

